# tracksy-release

./: CHANGELOG.md  SECURITY.md  cliff.toml  new_file.json  nouveau_fichier.json  nouveau_fichier.txt
.github/: cliff-changelog.toml  cliff-release-notes.toml  cliff.toml  file-to-remove.txt
.github/workflows/: meta-release.yml
.moon/: tasks.yml
app/: moon.yml  package.json
blog/: package.json
git-cliff/: CHANGELOG.md
synthetic-datasets/: moon.yml  pyproject.toml
