[project]
name = "synthetic_datasets"
version = "1.0.2"
description = "Tracksy app test datasets"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "faker>=33.1.0",
    "numpy>=2.3.2",
    "pydantic>=2.10.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.8.3",
    "ty>=0.0.1a16",
]

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["synthetic_datasets"]

[tool.ruff]
line-length = 120
select = ["E4", "E7", "E9", "F", "I"]

[project.scripts]
generate = "synthetic_datasets.app:main"
